# testProject

./: .gitignore  LICENSE  README.md
TestMatlab/: Readme.txt
TestMatlab/test1/: test1.m  test2.m
TestPhp/: Readme.txt
TestShell/: evalTest.sh  test1.sh  test2.sh  test6.sh
dirC/240706test1/: 240706ExcelConverter.py  Makefile  dataOriginal.txt  main  main.c  main.m  output.txt  test.py  test1.xlsx
dirC/241114test1/: Makefile  data1  data2  main.c
dirC/250115test/: CMakeLists.txt  Makefile  main.c  main.h
dirC/cTestCmake/: makefile.bk
dirC/distinguishBigEndCPU/: main.c
dirC/fileIOHandling/: CMakeLists.txt
dirC/macAddrStr2HexV1/: main.c  main.h
dirC/macAddrStr2HexV2/: main.c  mainReference2.c  mainRefference.c
dirC/splitTheString/: main.c
dirC/strtok/: main.c
dirCgi/cgiTest/: output.c
dirCpp/cppTemplate241103/: CMakeLists.txt  Readme.md
dirCpp/cppTemplate241103/include/: main.h
dirCpp/cppTemplate241103/src/: main.cpp
dirCpp/cppTestCmake/: README.md  makefile.bk
dirCpp/cppTestMacPrj/: commonClass.hpp  main.h
dirHtml/: Readme.txt
dirJava/: Readme.txt
dirLinux/firstModuleTest/: hello.c
dirLinux/kernelTest1/: makefile
dirLinux/netlinkTest/: readme.md
dirLinux/testModule2/: make-module.sh  makefile
dirLinux/virtualNetDriverTest/: makefile  virtualNetDriver.h
dirLinux/virtualNetDriverTestEld/: virtualNetDriver.c  virtualNetDriver.h
dirPython/240512converExcelToJsonForLocalRRM/: excelToJsonForRRM.py  excelToJsonForRRMv2.py  readme.mk
dirShell/: test.txt  test7.sh
dirShell/test1/: test1.sh  (+4 more)
makefileTest/: main.cpp  makefile
(+140 files in other folders)
